--- a/app/export/index.html
+++ b/app/export/index.html
@@ -9,39 +9,89 @@
 		<script defer src="./src/js/export.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly.css" />
+		<link rel="stylesheet" href="../.././src/tailwind.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
 	<body>
+		<!-- build number -->
+		<div class="w-full text-white bg-black font-bold build">
+			<div class="container flex flex-row items-center justify-center px-6 py-2 mx-auto">
+				<div class="flex">
+					<p class="mx-3 flex flex-row build-content">You are running a pre release version of Authme!</p>
+				</div>
+			</div>
+		</div>
+
+		<!-- content -->
 		<div class="center">
 			<h1 class="h1">Authme</h1>
 			<h2 class="h2">Export</h2>
 			<p class="text3 p0">You can export everything form your saved config.</p>
-			<button class="button1 but0" onclick="hide()">Close</button>
-			<div class="before_export">
-				<h3>Start export</h3>
-				<p class="text3 p1">If you saved your config you can export the secrects and the QR code(s).</p>
-				<button class="button1 but1" id="but0" onclick="exp()">Export</button>
-				<br />
+			<button class="buttonm" onclick="hide()">
+				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						stroke-width="2"
+						d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
+					/>
+				</svg>
+				Close window
+			</button>
+			<!-- before export -->
+			<div class="before_export mx-auto rounded-2xl bg-gray-800 w-2/3">
+				<h2 class="pt-3">Export code(s)</h2>
+				<h3>If you saved your config you can export the secrects and the QR code(s).</h3>
+				<button class="buttonm but1 mb-4" id="but0" onclick="exp()">
+					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16V4m0 0L3 8m4-4l4 4m6 0v12m0 0l4-4m-4 4l-4-4" />
+					</svg>
+					Export
+				</button>
 			</div>
+			<!-- after export -->
 			<div class="after_export">
-				<h3>Save export</h3>
-				<p class="text3">Save your exported data as a text file to use it elsewhere.</p>
-				<button class="button1" id="but1" onclick="save_file()">Save as .txt</button>
-				<button class="button1" id="but2" onclick="save_qr_codes()">Save as .html</button>
-				<div class="parent">
-					<div class="div1">
-						<p>Ideal to import for Authme or for Authme Web.</p>
-					</div>
-					<div class="div2">
-						<p>Ideal for scanning QR codes or for security backup.</p>
+				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3">
+					<h2 class="pt-3">Save exported code(s)</h2>
+					<h3>Save your exported data as a file to use it elsewhere.</h3>
+					<div class="flex flex-row">
+						<div>
+							<button class="buttonm" id="but1" onclick="saveFile()">
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										d="M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2"
+									/>
+								</svg>
+								Save as .txt
+							</button>
+							<p class="mt-3 pb-3">Ideal to import for Authme or for Authme Web.</p>
+						</div>
+						<div>
+							<button class="buttonm" id="but2" onclick="saveQrCodes()">
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										d="M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2"
+									/>
+								</svg>
+								Save as .html
+							</button>
+							<p class="mt-3 pb-3 relative right-3">Ideal for scanning QR codes or for security backup.</p>
+						</div>
 					</div>
 				</div>
 
 				<br />
 				<textarea class="blur" readonly="readonly" id="result" cols="30" rows="10"></textarea>
 			</div>
+			<!-- qr codes -->
 		</div>
 	</body>
 </html>
