--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -33,10 +33,7 @@
 
 					<p class="mx-3 relative top-1">Authme runs in offline mode. The app will work fine, but you can't look for new updates!</p>
 				</div>
-				<a
-					onclick="this.parentElement.style.display='none'"
-					class="p-1 transition-colors duration-200 transform rounded-md hover:text-gray-800 cursor-pointer"
-				>
+				<a onclick="this.parentElement.style.display='none'" class="p-1 transition-colors duration-200 transform rounded-md hover:text-gray-800 cursor-pointer">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
 					</svg>
@@ -54,10 +51,7 @@
 
 					<p class="mx-3 relative top-1">Authme runs in online mode. The app reconnected to the internet, you can look for new updates!</p>
 				</div>
-				<a
-					onclick="this.parentElement.style.display='none'"
-					class="p-1 transition-colors duration-200 transform rounded-md hover:text-gray-800 cursor-pointer"
-				>
+				<a onclick="this.parentElement.style.display='none'" class="p-1 transition-colors duration-200 transform rounded-md hover:text-gray-800 cursor-pointer">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
 					</svg>
@@ -70,12 +64,7 @@
 			<div class="container flex flex-row items-center justify-between px-6 py-4 mx-auto">
 				<div class="flex">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-						<path
-							stroke-linecap="round"
-							stroke-linejoin="round"
-							stroke-width="2"
-							d="M8 16l2.879-2.879m0 0a3 3 0 104.243-4.242 3 3 0 00-4.243 4.242zM21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-						/>
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 13l-3 3m0 0l-3-3m3 3V8m0 13a9 9 0 110-18 9 9 0 010 18z" />
 					</svg>
 
 					<p class="mx-3 flex flex-row relative top-1">
@@ -84,10 +73,7 @@
 						<a class="link" onclick="releaseNotes()">Release notes</a>
 					</p>
 				</div>
-				<a
-					onclick="this.parentElement.style.display='none'"
-					class="p-1 transition-colors duration-200 transform rounded-md hover:text-gray-800 cursor-pointer"
-				>
+				<a onclick="this.parentElement.style.display='none'" class="p-1 transition-colors duration-200 transform rounded-md hover:text-gray-800 cursor-pointer">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
 					</svg>
@@ -101,12 +87,7 @@
 				<div class="mb-1 mt-2 mr-4 ml-4">
 					<button id="setting " class="buttonm settings" onclick="menu(event, 'setting')">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
-							/>
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
 						</svg>
 						Settings
@@ -115,12 +96,7 @@
 				<div class="mb-1 mt-1 mr-4 ml-4">
 					<button id="codes " class="buttonm codes" onclick="menu(event, 'codes')">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z"
-							/>
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
 						</svg>
 						Codes
 					</button>
@@ -128,12 +104,7 @@
 				<div class="mb-1 mt-1 mr-4 ml-4">
 					<button id="shortcuts " class="buttonm shortcuts" onclick="menu(event, 'shortcuts')">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"
-							/>
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
 						</svg>
 						Shortcuts
 					</button>
@@ -141,12 +112,7 @@
 				<div class="mb-1 mt-1 mr-4 ml-4">
 					<button id="experimental " class="buttonm experimental" onclick="menu(event, 'experimental')">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z"
-							/>
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z" />
 						</svg>
 						Experimental
 					</button>
@@ -154,12 +120,7 @@
 				<div class="mb-1 mt-1 mr-4 ml-4">
 					<button id="about" class="buttonm about" onclick="about()">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-							/>
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
 						</svg>
 						About
 					</button>
@@ -174,12 +135,7 @@
 						<p class="text3">You can configure the app setting here.</p>
 						<button class="buttonm2" onclick="hide()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path
-									stroke-linecap="round"
-									stroke-linejoin="round"
-									stroke-width="2"
-									d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
-								/>
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
 							</svg>
 							Close window
 						</button>
@@ -256,6 +212,21 @@
 						</button>
 						<br />
 						<hr />
+						<h3>Logs</h3>
+						<p class="text3">You can view the logs for debugging. You can view all the logs in the settings folder.</p>
+						<button class="buttonm2" id="but14" onclick="logs()">
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<path
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2"
+									d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"
+								/>
+							</svg>
+							Latest log
+						</button>
+						<br />
+						<hr />
 						<h3>Status</h3>
 						<p class="text3">Current status of the API, used for updates only. Click for all the status informations.</p>
 						<button class="buttonm2" id="but6" onclick="statusLink()">-</button>
@@ -263,7 +234,7 @@
 						<hr />
 						<h3>Version</h3>
 						<p class="text3">Your current Authme version. Click for release notes.</p>
-						<button class="buttonm2" id="but7" onclick="releasesLink()">-</button>
+						<button class="buttonm2" id="but7" onclick="releaseNotes()">-</button>
 					</div>
 
 					<!-- codes -->
@@ -292,8 +263,8 @@
 					<div id="shortcuts" class="tabcontent part">
 						<h3>Shortcuts</h3>
 						<p class="text3">
-							You can modify the shortcuts here, if you don't understand something just read the docs. Shortcuts not work on this page,
-							go back to the settings tab to reactivate them!
+							You can modify the shortcuts here, if you don't understand something just read the docs. Shortcuts not work on this page, go back to
+							the settings tab to reactivate them!
 						</p>
 						<button class="buttonm2" onclick="shortcutsLink()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -817,8 +788,8 @@
 						<hr />
 						<h3>Global shortcuts</h3>
 						<p class="text3">
-							You can modify the global shortcuts here, if you don't understand something just read the docs. Shortcuts not work on this
-							page, go back to the settings tab to reactivate them!
+							You can modify the global shortcuts here, if you don't understand something just read the docs. Shortcuts not work on this page, go
+							back to the settings tab to reactivate them!
 						</p>
 						<button class="buttonm2" onclick="globalShortcutsLink()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -970,10 +941,56 @@
 
 					<!-- experimental -->
 					<div id="experimental" class="tabcontent part">
+						<h3>Sort codes</h3>
+						<p class="text3">
+							You can set a time offset for the codes, confirm by pressing enter. Specify the time in seconds, it can be a positive or a negative
+							number.
+						</p>
+						<div class="dropdown">
+							<button class="dropdown-button" id="drp0" onclick="dropdown()">
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l4-4 4 4m0 6l-4 4-4-4" />
+								</svg>
+								Default
+							</button>
+							<div class="dropdown-content">
+								<a class="dropdown-link" href="#" onclick="dropdownChoose(0)">
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l4-4 4 4m0 6l-4 4-4-4" />
+									</svg>
+									Default
+								</a>
+								<a class="dropdown-link" href="#" onclick="dropdownChoose(1)">
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-width="2"
+											d="M3 4h13M3 8h9m-9 4h9m5-4v12m0 0l-4-4m4 4l4-4"
+										/>
+									</svg>
+									A-Z
+								</a>
+								<a class="dropdown-link" href="#" onclick="dropdownChoose(2)">
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-width="2"
+											d="M3 4h13M3 8h9m-9 4h6m4 0l4-4m0 0l4 4m-4-4v12"
+										/>
+									</svg>
+									Z-A
+								</a>
+							</div>
+						</div>
+						<p class="unstable">This feature is WIP! It might be unstable or buggy!</p>
+						<br />
+						<hr />
 						<h3>Codes time offset</h3>
 						<p class="text3">
-							You can set a time offset for the codes, confirm by pressing enter. Specify the time in seconds, it can be a positive or a
-							negative number.
+							You can set a time offset for the codes, confirm by pressing enter. Specify the time in seconds, it can be a positive or a negative
+							number.
 						</p>
 						<input type="number" id="inp0" class="input1 offset" max="1000" min="-1000" maxlength="5" step="5" value="0" />
 						<p class="warning">This feature is WIP! Use it at your own risk!</p>
