New encryption method #132

--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -52,7 +52,7 @@
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 beforeLoad">
 				<h2 id="rollbackBut" class="pt-3">Load saved code(s)</h2>
 				<h3>You can load the code(s) you saved. After that you can edit them or add more.</h3>
-				<button class="buttonm mb-4" onclick="loadCodes()">
+				<button class="buttonm mb-4" onclick="loadChooser()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
 					</svg>
