--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -83,10 +83,10 @@
 							<h4>A new more secure encryption method for your codes (Default after 2.7.0).</h4>
 							<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
 								<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
-									<input onclick="encryptionMethodToggle()" id="tgl0" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
+									<input checked onclick="encryptionMethodToggle()" id="tgl0" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
 									<label for="tgl0" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label>
 								</div>
-								<span id="tgt0" class="text-black text-xl">Off</span>
+								<span id="tgt0" class="text-black text-xl">On</span>
 							</div>
 						</div>
 					</details>
