--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -357,7 +357,11 @@
 					<!-- shortcuts -->
 					<div id="shortcuts" class="tabcontent part">
 						<h3>Shortcuts</h3>
-						<p class="text3">You can modify the shortcuts here, if you don't understand something just read the docs. Shortcuts not work on this page, go back to the settings tab to reactivate them!</p>
+						<p class="text3">
+							You can modify the shortcuts here, if you don't understand something just read the docs.
+							<br />
+							Shortcuts not work on this page, go back to the settings tab to reactivate them!
+						</p>
 						<button class="buttonm2" onclick="shortcutsLink()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
@@ -443,6 +447,87 @@
 
 								<button class="buttoni button" id="hk2_button_delete" onclick="hk_delete(2)">
 									<svg id="hk2_svg_delete" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+									</svg>
+								</button>
+							</div>
+						</div>
+						<div class="grid">
+							<div class="div1">
+								<p class="text3 text">Reset zoom</p>
+							</div>
+							<div class="div2">
+								<input class="input1" disabled type="text" id="hk12_input" />
+							</div>
+							<div class="div3">
+								<button class="buttoni button" id="hk12_button_edit" onclick="hk_edit(12)">
+									<svg id="hk12_svg_edit" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+									</svg>
+								</button>
+
+								<button class="buttoni button" id="hk12_button_reset" onclick="hk_reset(12)">
+									<svg id="hk12_svg_reset" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+									</svg>
+								</button>
+
+								<button class="buttoni button" id="hk12_button_delete" onclick="hk_delete(12)">
+									<svg id="hk12_svg_delete" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+									</svg>
+								</button>
+							</div>
+						</div>
+						<div class="grid">
+							<div class="div1">
+								<p class="text3 text">Zoom in</p>
+							</div>
+							<div class="div2">
+								<input class="input1" disabled type="text" id="hk13_input" />
+							</div>
+							<div class="div3">
+								<button class="buttoni button" id="hk13_button_edit" onclick="hk_edit(13)">
+									<svg id="hk13_svg_edit" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+									</svg>
+								</button>
+
+								<button class="buttoni button" id="hk13_button_reset" onclick="hk_reset(13)">
+									<svg id="hk13_svg_reset" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+									</svg>
+								</button>
+
+								<button class="buttoni button" id="hk13_button_delete" onclick="hk_delete(13)">
+									<svg id="hk13_svg_delete" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+									</svg>
+								</button>
+							</div>
+						</div>
+						<div class="grid">
+							<div class="div1">
+								<p class="text3 text">Reset zoom</p>
+							</div>
+							<div class="div2">
+								<input class="input1" disabled type="text" id="hk14_input" />
+							</div>
+							<div class="div3">
+								<button class="buttoni button" id="hk14_button_edit" onclick="hk_edit(14)">
+									<svg id="hk14_svg_edit" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+									</svg>
+								</button>
+
+								<button class="buttoni button" id="hk14_button_reset" onclick="hk_reset(14)">
+									<svg id="hk14_svg_reset" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+									</svg>
+								</button>
+
+								<button class="buttoni button" id="hk14_button_delete" onclick="hk_delete(14)">
+									<svg id="hk14_svg_delete" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
 									</svg>
 								</button>
@@ -694,7 +779,11 @@
 						<br />
 						<hr />
 						<h3>Global shortcuts</h3>
-						<p class="text3">You can modify the global shortcuts here, if you don't understand something just read the docs. Shortcuts not work on this page, go back to the settings tab to reactivate them!</p>
+						<p class="text3">
+							You can modify the global shortcuts here, if you don't understand something just read the docs.
+							<br />
+							Shortcuts not work on this page, go back to the settings tab to reactivate them!
+						</p>
 						<button class="buttonm2" onclick="globalShortcutsLink()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
