--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -52,7 +52,7 @@
 						</svg>
 					</div>
 				</div>
-				<button class="buttonm mb-5" onclick="comparePasswords()">
+				<button class="buttoni mb-5" onclick="comparePasswords()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
 					</svg>
@@ -65,7 +65,7 @@
 						<div>
 							<h3>Don't require password</h3>
 							<h4>If you don't want to type in your password every time you launch Authme.</h4>
-							<button onclick="noPassword()" class="buttonm">
+							<button onclick="noPassword()" class="buttoni">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
 								</svg>
@@ -73,7 +73,7 @@
 							</button>
 							<h3>Backup key</h3>
 							<h4>In case you forget your password you can use this backup key to get back your codes.</h4>
-							<button onclick="generateKey()" class="buttonm">
+							<button onclick="generateKey()" class="buttoni">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
 								</svg>
