--- a/app/confirm/index.html
+++ b/app/confirm/index.html
@@ -39,7 +39,7 @@
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21" />
 					</svg>
 					<div>
-						<button class="buttonm mb-5" onclick="unhashPassword()">
+						<button class="buttoni mb-5" onclick="unhashPassword()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
 							</svg>
@@ -52,7 +52,7 @@
 							<div>
 								<h3>Forgot password?</h3>
 								<h4>If you have a backup code you can recover your password. If you don't have one then try to think harder.</h4>
-								<button onclick="forgotPassword()" class="buttonm">
+								<button onclick="forgotPassword()" class="buttoni">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
 									</svg>
