--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -31,7 +31,7 @@
 			<h1>Authme</h1>
 			<h2>Edit</h2>
 			<p class="text3">You can edit, delete or add more codes.</p>
-			<button class="buttonm" onclick="hide()">
+			<button class="buttoni" onclick="hide()">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
 				</svg>
@@ -41,7 +41,7 @@
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 rollback">
 				<h2 id="rollbackBut" class="pt-3">Rollback</h2>
 				<h3>You can rollback to the latest save. If you load your codes below it will overwrite the current rollback save!</h3>
-				<button class="buttonm mb-4" onclick="rollback()">
+				<button class="buttoni mb-4" onclick="rollback()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4" />
 					</svg>
@@ -52,7 +52,7 @@
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 beforeLoad">
 				<h2 id="rollbackBut" class="pt-3">Load saved code(s)</h2>
 				<h3>You can load the code(s) you saved. After that you can edit them or add more.</h3>
-				<button class="buttonm mb-4" onclick="loadChooser()">
+				<button class="buttoni mb-4" onclick="loadChooser()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
 					</svg>
@@ -64,13 +64,13 @@
 				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3">
 					<h2 id="rollbackBut" class="pt-3">Edit mode</h2>
 					<h3>Now you can modify existing codes or add more.</h3>
-					<button class="buttonm mb-4" onclick="createSave()">
+					<button class="buttoni mb-4" onclick="createSave()">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
 						</svg>
 						Save modification(s)
 					</button>
-					<button class="buttonm mb-4" onclick="addMore()">
+					<button class="buttoni mb-4" onclick="addMore()">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
 						</svg>
