--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -164,27 +164,11 @@
 				</div>
 				<div class="flex-flex-col">
 					<div class="mb-1 mt-1 mr-4 ml-4">
-						<button class="buttonm" onclick="onlineDocs()">
-							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
-							</svg>
-							Documentation
-						</button>
-					</div>
-					<div class="mb-1 mt-1 mr-4 ml-4">
 						<button class="buttonm" onclick="provideFeedback()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
 							</svg>
 							Feedback
-						</button>
-					</div>
-					<div class="mb-1 mt-1 mr-4 ml-4">
-						<button class="buttonm" onclick="support()">
-							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
-							</svg>
-							Support
 						</button>
 					</div>
 					<div class="mb-5 mt-1 mr-4 ml-4">
@@ -385,7 +369,7 @@
 						<br />
 						<div class="grid">
 							<div class="div1">
-								<p class="text3 text">Show</p>
+								<p class="text3 text">Show app</p>
 							</div>
 							<div class="div2">
 								<input class="input1" disabled type="text" id="hk0_input" />
@@ -520,7 +504,7 @@
 						</div>
 						<div class="grid">
 							<div class="div1">
-								<p class="text3 text">Reset zoom</p>
+								<p class="text3 text">Zoom out</p>
 							</div>
 							<div class="div2">
 								<input class="input1" disabled type="text" id="hk14_input" />
@@ -547,7 +531,7 @@
 						</div>
 						<div class="grid">
 							<div class="div1">
-								<p class="text3 text">Edit</p>
+								<p class="text3 text">Edit codes</p>
 							</div>
 							<div class="div2">
 								<input class="input1" disabled type="text" id="hk3_input" />
@@ -628,60 +612,6 @@
 						</div>
 						<div class="grid">
 							<div class="div1">
-								<p class="text3 text">Release</p>
-							</div>
-							<div class="div2">
-								<input class="input1" disabled type="text" id="hk6_input" />
-							</div>
-							<div class="div3">
-								<button class="buttonr button" id="hk6_button_edit" onclick="hk_edit(6)">
-									<svg id="hk6_svg_edit" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
-									</svg>
-								</button>
-
-								<button class="buttonr button" id="hk6_button_reset" onclick="hk_reset(6)">
-									<svg id="hk6_svg_reset" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
-									</svg>
-								</button>
-
-								<button class="buttonr button" id="hk6_button_delete" onclick="hk_delete(6)">
-									<svg id="hk6_svg_delete" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
-									</svg>
-								</button>
-							</div>
-						</div>
-						<div class="grid">
-							<div class="div1">
-								<p class="text3 text">Support</p>
-							</div>
-							<div class="div2">
-								<input class="input1" disabled type="text" id="hk7_input" />
-							</div>
-							<div class="div3">
-								<button class="buttonr button" id="hk7_button_edit" onclick="hk_edit(7)">
-									<svg id="hk7_svg_edit" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
-									</svg>
-								</button>
-
-								<button class="buttonr button" id="hk7_button_reset" onclick="hk_reset(7)">
-									<svg id="hk7_svg_reset" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
-									</svg>
-								</button>
-
-								<button class="buttonr button" id="hk7_button_delete" onclick="hk_delete(7)">
-									<svg id="hk7_svg_delete" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
-									</svg>
-								</button>
-							</div>
-						</div>
-						<div class="grid">
-							<div class="div1">
 								<p class="text3 text">Documentation</p>
 							</div>
 							<div class="div2">
@@ -709,7 +639,61 @@
 						</div>
 						<div class="grid">
 							<div class="div1">
-								<p class="text3 text">Licenses</p>
+								<p class="text3 text">Release notes</p>
+							</div>
+							<div class="div2">
+								<input class="input1" disabled type="text" id="hk6_input" />
+							</div>
+							<div class="div3">
+								<button class="buttonr button" id="hk6_button_edit" onclick="hk_edit(6)">
+									<svg id="hk6_svg_edit" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+									</svg>
+								</button>
+
+								<button class="buttonr button" id="hk6_button_reset" onclick="hk_reset(6)">
+									<svg id="hk6_svg_reset" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+									</svg>
+								</button>
+
+								<button class="buttonr button" id="hk6_button_delete" onclick="hk_delete(6)">
+									<svg id="hk6_svg_delete" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+									</svg>
+								</button>
+							</div>
+						</div>
+						<div class="grid">
+							<div class="div1">
+								<p class="text3 text">Support development</p>
+							</div>
+							<div class="div2">
+								<input class="input1" disabled type="text" id="hk7_input" />
+							</div>
+							<div class="div3">
+								<button class="buttonr button" id="hk7_button_edit" onclick="hk_edit(7)">
+									<svg id="hk7_svg_edit" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+									</svg>
+								</button>
+
+								<button class="buttonr button" id="hk7_button_reset" onclick="hk_reset(7)">
+									<svg id="hk7_svg_reset" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+									</svg>
+								</button>
+
+								<button class="buttonr button" id="hk7_button_delete" onclick="hk_delete(7)">
+									<svg id="hk7_svg_delete" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+									</svg>
+								</button>
+							</div>
+						</div>
+						<div class="grid">
+							<div class="div1">
+								<p class="text3 text">Show licenses</p>
 							</div>
 							<div class="div2">
 								<input class="input1" disabled type="text" id="hk9_input" />
