--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -315,7 +315,7 @@
 						<br />
 						<hr />
 						<h3>Blur codes</h3>
-						<p class="text3">Blurs the 2FA code. You can still copy it or hover over it to reveal. </p>
+						<p class="text3">Blurs the 2FA code. You can still copy it or hover over it to reveal.</p>
 						<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
 							<a href="#" onclick="reveal()">
 								<div class="noclick relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
@@ -881,7 +881,7 @@
 					<!-- experimental -->
 					<div id="experimental" class="tabcontent part">
 						<h3>Sort codes</h3>
-						<p class="text3">You can set a time offset for the codes, confirm by pressing enter. Specify the time in seconds, it can be a positive or a negative number.</p>
+						<p class="text3">You can choose how to sort the saved and loaded codes. By default codes are sorted by uploading order.</p>
 						<div class="dropdown">
 							<button class="dropdown-button" id="drp0" onclick="dropdown()">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
